--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-nodejs-mongo",
+  "name": "express-nodejs-mongo-webstock",
   "version": "0.0.0",
   "private": true,
   "scripts": {
