--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "express-nodejs-mongo-webstock",
-  "version": "0.0.0",
+  "version": "0.0.10",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
+  "author": {
+    "name": "nazimodi",
+    "email": "nazimodi@163.com"
+   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
