--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "name": "nazimodi",
     "email": "nazimodi@163.com"
    },
+   "repository": {
+     "type": "git",
+     "url": "http://github.com/nazimodi/express-nodejs-mongo-webstock.git"
+   },
+   "keywords": {
+     "express",
+     "nodejs",
+     "stock"
+   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
