--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   "author": {
     "name": "nazimodi",
     "email": "nazimodi@163.com"
-   },
-   "repository": {
-     "type": "git",
-     "url": "http://github.com/nazimodi/express-nodejs-mongo-webstock.git"
-   },
-   "keywords": {
-     "express",
-     "nodejs",
-     "stock"
-   },
+  },
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/nazimodi/express-nodejs-mongo-webstock.git"
+  },
+  "keywords": [
+    "express",
+    "nodejs",
+    "stock"
+  ],
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -27,5 +27,8 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "request": "2.72.0"
+  },
+  "devDependencies": {
+    "bluebird": "^3.3.5"
   }
 }
